# Bikeage

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Camera.h  Initializers.h  PipelineBuilder.h  Renderer.h  Types.h  Utilities.h
shaders/: colored_triangle_mesh.vert.spv  gradient.spv
src/: Initializers.cpp  PipelineBuilder.cpp  Renderer.cpp  Utilities.cpp  main.cpp
src/shaders/: colored_triangle_mesh.vert  gradient.comp
